[package]
name = "pipebased_common"
version = "0.1.0"
edition = "2021"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebased"
homepage = "https://github.com/pipebase/pipebased"
documentation = "https://docs.rs/pipebased_common/"
description = "lib for pipebased components"
keywords = ["pipebase", "daemon"]

[dependencies]
dbus = { version = "0.9.5" }
fslock = "0.2.0"
pipebuilder_common = { version = "0.2.1" }
prost = "0.9"
prost-types = "0.9"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1.0.29"
tonic = "0.6"
tracing = "0.1"
tracing-subscriber = "0.2"
systemd_client = "0.1.6"

[build-dependencies]
prost-build = "0.9"
tonic-build = "0.6"
